@@ -1,5 +1,6 @@
 ### [Unreleased]
 #### Added
+- Display event picture if available
 #### Changed
 #### Deprecated
 #### Removed
